<resources>
    <string name="app_name">MOMALA</string>
    <string name="mosquito">Mosquito</string>
    <string name="heading">MOMALA APP</string>
    <string name="guide">GUIDE</string>
    <string name="start">START</string>
    <string name="understood">UNDERSTOOD</string>
    <string name="done">DONE</string>
    <string name="description">HIGH QUALITY MALARIA DIAGNOSIS IN LOW RESOURCE ENVIRONMENTS</string>
    <string name="title_activity_guide">Guide</string>
    <string name="guide_step_0">Welcome, we will guide you through the setup in order to start with the analysis</string>
    <string name="guide_step_1">Clean both camera lens and microscope lens to remove any dirt that can interfere with the detection</string>
    <string name="guide_step_2">Place the phone into the holding kit provided and secure the holding kit to the microscope</string>
    <string name="guide_step_3">Check if the phone is properly attached to the microscope and make sure the battery is charged</string>
    <string name="guide_step_4">Prepare the blood smear, ensure the blood smear is thick enough and check for contamination</string>
    <string name="picture_calibrate_guide">The camera needs to be calibrated with a clear image of the blood sample to avoid blurriness</string>
    <string name="guide_step_5">After placing blood smear underneath the microscope lens wait until it gives confirmation that the image is focused</string>
    <string name="guide_step_6">Move the blood smear when asked, stop moving when prompted. While changing position of the blood smear do not make any sudden movements</string>
    <string name="guide_step_7">During focusing do not touch the microscope or mobile phone to yield high quality images</string>
    <string name="guide_step_8">After focusing, the application takes images automatically and shows the progress to you</string>
    <string name="guide_step_9">Wait until the results are shown and upload them to your server for safekeeping</string>
    <string name="guide_step_10">Well done, once you click on the start button the app will start taking pictures automatically</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="white_blood_cells">White blood cells</string>
    <string name="parasites">Parasites</string>
    <string name="red_blood_cells">Red blood cells</string>
    <string name="inf_red_blood_cells">Infected red blood cells</string>
    <string name="number_of_fields">Number of fields:</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="test_information">Test Information</string>
    <string name="microscopist">Microscopist</string>
    <string name="patient">Patient</string>
    <string name="nurse">Nurse</string>
    <string name="results">Results</string>
    <string name="close">Close</string>
    <string name="send_e_mail_to_nurse">E-mail results to the nurse</string>
    <string name="focusing">Focusing…</string>
    <string name="picture_taken">Picture taken!</string>
    <string name="keep_moving">Keep moving the blood smear</string>
    <string name="number_pictures">Number of pictures:</string>
    <string name="no_more_pictures_needed">No more pictures are needed. Results will be shown in a second. </string>
    <string name="composing_results">COMPOSING RESULTS…</string>
    <string name="analysing">Analysing</string>
    <string name="request_permission">This app needs camera permission.</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="calibration">Calibration</string>
    <string name="calibrate">CALIBRATE</string>
    <string name="device_calibrated">Device calibrated</string>
    <string name="analysed_fields">Analysed fields</string>
    <string name="parasites_per_microlitre">PARASITES/µL BLOOD</string>
    <string name="image_not_loaded">Image not loaded</string>
    <string name="skip">SKIP INTRO</string>
    <string name="picture_already_taken">This picture has been already taken.</string>
    <string name="see_evidence">See evidence</string>
    <string name="click_on_start_if_you_want_to_analyse_another_blood_sample">Click on SEE EVIDENCE to check the pictures taken and the detected white blood cells and parasites. Or click on START if you want to analyse another blood sample.</string>
    <string name="conclusion">Conclusion</string>
    <string name="conclusion_no_malaria">There is no strong evidence that the patient has malaria</string>
    <string name="conclusion_remark_0">Sensitivity of thick blood film</string>
    <string name="conclusion_remark_1">Patient may have symptoms, where malaria is seasonal</string>
    <string name="conclusion_remark_2">The patient should show symptoms</string>
    <string name="conclusion_remark_3">Maximum parasitemia of P.v. and P.o.</string>
    <string name="conclusion_remark_4">Hyperparasitemia/severe malaria, increased mortality</string>
    <string name="conclusion_remark_5">Exchange transfusion may be considered / high mortality</string>
    <string name="finished_analysis">You have successfully finished the analysis. Here there are the results:</string>
    <string name="tutorial">HOW IT WORKS</string>
    <string name="seen_pictures">Field %d out of %d</string>
    <string name="finish">Finish</string>
</resources>
