<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="149dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/mosquito"
        android:src="@drawable/mosquito"
        app:layout_constraintBottom_toTopOf="@+id/headingTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/headingTxt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="49dp"
        android:layout_marginStart="49dp"
        android:lineSpacingExtra="3sp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textAppearance="@style/heading"
        app:layout_constraintBottom_toTopOf="@+id/descTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <Button
        android:id="@+id/guideBtn"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/guide"
        android:textAppearance="@style/btnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTxt" />

    <Button
        android:id="@+id/calibrateBtn"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/calibrate"
        android:textAppearance="@style/btnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideBtn" />

    <TextView
        android:id="@+id/descTxt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="206dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="27sp"
        android:text="@string/description"
        android:textAppearance="@style/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingTxt" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/start"
        android:textAppearance="@style/btnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibrateBtn" />
</android.support.constraint.ConstraintLayout>