<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.input.InputDataActivity">

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="75dp"
        android:text="@string/thickAnalysis"
        android:textAppearance="@style/analysis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTop"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <EditText
        android:id="@+id/editTextBottom"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editTextTop"
        app:layout_constraintTop_toBottomOf="@+id/editTextTop" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_bg"
        android:text="@string/next"
        android:textAppearance="@style/btnText"
        app:layout_constraintEnd_toEndOf="@+id/editTextBottom"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/clearBtn"
        app:layout_constraintTop_toBottomOf="@+id/clearBtn" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:background="@drawable/button_bg"
        android:textAppearance="@style/btnText"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/nextBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/button_bg_2"
        android:text="@string/clear"
        android:textAppearance="@style/btnText"
        app:layout_constraintEnd_toEndOf="@+id/editTextBottom"
        app:layout_constraintTop_toBottomOf="@+id/editTextBottom" />
</android.support.constraint.ConstraintLayout>