<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">

    <com.google.android.cameraview.CameraView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:adjustViewBounds="true"
        app:autoFocus="true"
        app:aspectRatio="4:3"
        app:facing="back"
        app:flash="off"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="0dp">

        <TextView
            android:id="@+id/statusTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/focusing"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/keep_moving"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusTV" />

        <TextView
            android:id="@+id/numberPicturesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/number_pictures"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/numberPictures"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="14dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/statusTV"
            app:layout_constraintTop_toBottomOf="@+id/statusTV" />

        <TextView
            android:id="@+id/numberPictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="1"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/numberPicturesLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/numberPicturesLabel" />

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#99FF4081"
        android:padding="8dp">

        <TextView
            android:id="@+id/wbc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_blood_cells"
            android:textColor="@android:color/background_light"/>

        <TextView
            android:id="@+id/wbcTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_toEndOf="@+id/wbc_label"
            android:layout_alignBaseline="@id/wbc_label"/>

        <TextView
            android:id="@+id/parasites_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parasites"
            android:layout_below="@id/wbc_label"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/parasitesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/parasites_label"
            android:layout_alignEnd="@+id/wbcTV"
            android:layout_toEndOf="@+id/parasites_label"
            android:text="0"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light" />
    </RelativeLayout>

</RelativeLayout>